# monikers

./: .gitignore  docker-compose.prod.yml  docker-compose.yml
backend/: .env  Dockerfile.prod  pyproject.toml
backend/app/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py  0002_auto_20220109_2338.py  0003_game_name.py  0004_auto_20220407_1514.py  0005_auto_20220407_1546.py
backend/app/static/: style.css
backend/app/templates/: base_generic.html  game_create.html  game_detail.html  game_list.html
backend/config/: settings.py
backend/scripts/: wait-for-it.py
